2000-11-20  Masatake YAMATO  <yamato@redhat.com>

	* autotrace.h: Put typedefs here.

	* autotrace.c (at_home_site): New function.

	* Makefile.am (autotraceinclude_HEADERS): Only 
	types.h and autotrace.h are installed.

2000-11-18  Masatake YAMATO  <yamato@redhat.com>

	* Makefile.am (autotraceinclude_HEADERS): 
	Added image-header.h. 
	(noinst_HEADERS): Added xstd.h, epsilon-equal.h,
	logreport.h, usefull.h, message.h.
	(libautotrace_a_SOURCES): Added quantize.h and
	median.h.

	* (substring.[ch]): Merged into filename.c.

	* (concat3.[ch]): Likewise.

	* xstd.h: xmem.h, xf*.[ch] are unified.

	* filename.[ch]: *-suffi?x and are unified.

2000-11-17  Masatake YAMATO  <yamato@redhat.com>

	Make codes C++-clean. Suggested by 
	Glunz Wolfgang <Wolfgang.Glunz@icn.siemens.de>
	and 
	Reini Urban <rurban@sbox.tu-graz.ac.at>.
	
	* autotrace.h: Added an extern "C". 

	* fit.c (remove_adjacent_corners): Rename new to
	new_list.

	* getopt.h: Added an extern "C". 

	* thin-image.c (delete_map): Renamed from `delete'. 
	(thin_image): Add a cast to return value of malloc.
	(thin): Likewise.
	(thin): Use delete_map.

2000-11-14  Masatake YAMATO  <yamato@redhat.com>

	* Makefile.am (autotrace_SOURCES): Move some files
	to libautotrace_a_SOURCES from autotrace_SOURCES.

	* main.c (read_command_line): Use at_version().

	* autotrace.c (at_version): New function.

	* Makefile.am: Create libautotrace.a.

	* main.c: use autotrace.[ch].

	* autotrace.c: New file.

	* autotrace.h: New file.

	* output.c(output_list): New function.

	* input.c (input_format_entry): Added descr field.
	(input_list): New function.
	(input_list_formats): Move to main.
	
	* fit.h (fitting_opts_type): Added new field `thin'.

	* fit.c (new_fitting_opts): Initialize thin.

	* README (http): Remove files in main part.

	* Makefile.am (autotrace_SOURCES): Added autotrace.[ch].

	* fit.c: Apply a patch from martin.
	"I fixed a bug in fit.c that sometimes causes an endless 
	loop in AutoTrace."
